--- a/Enrollment.Rmd
+++ b/Enrollment.Rmd
@@ -7,9 +7,12 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
 ```{r}
-
-
+x <- read_rds("enrollment.rds") %>%
+  select(course_name, u_grad)
+x
+ 
 ```
