--- a/Enrollment.Rmd
+++ b/Enrollment.Rmd
@@ -8,11 +8,14 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(knitr)
 ```
 
-```{r}
+```{r echo = FALSE}
 x <- read_rds("enrollment.rds") %>%
-  select(course_name, u_grad)
-x
- 
+  filter(! is.na(course_name)) %>%
+  select(course_name, course_department, u_grad, total) %>%
+  arrange(desc(u_grad)) 
+
+kable(x)
 ```
